Changelog
=========

3.1a2 - unreleased
------------------

- Silence the ``manage_*`` warnings for the example and test types.
  [hannosch]

- Added tests for language selector viewlet and some small tweaks.
  [hannosch]

- Added tests for language selector portlet.
  [hannosch]

- Added tests for the schema vocabularies and fixed bug uncovered in
  the DeletableLanguagesVocabulary.
  [hannosch]

- Added tests for the language switcher view.
  [hannosch]

- Reformat functional tests and add test for viewing the Plone site root.
  [hannosch]

- Added tests for the LanguageIndex export/import steps.
  [hannosch]

- Convert GenericSetup steps registrations to ZCML.
  [hannosch]

- Added tests for SyncedLanguages vocabulary.
  [hannosch]

- Added test for I18NBaseFolder browser default behavior.
  [hannosch]

- Added tests for I18NBaseBTreeFolder.
  [hannosch]

- Removed all BBB imports for InitializeClass. We depend on Plone 3.3 which
  comes with Zope 2 versions with the forward compatible import locations, as
  introduced in Zope 2.10.8.
  [hannosch]

- Removed old type actions from example and test types.
  [hannosch]

- Added tests for I18NOrderedBaseFolder.
  [hannosch]

- Some PEP8 cleanup.
  [hannosch]

- Minor documentation updates.
  [hannosch]

3.1a1 - 2010-02-19
------------------

- Factor out filtering of "Language" parameter so it can be reused elsewhere.
  [hannosch, witsch]

- Made the manage_translations_form compatible with Plone 4 by replacing a
  call to referencebrowser_startupDirectory with hardcoding the current context
  as the startup directory.
  [huub_bouma]

- Added workflow transitions to the setup view to publish the language folders.
  [hannosch]

- Changed the setup view to give the folders native language titles.
  [hannosch]

- Added automatic setup of the language switcher to the setup view.
  [hannosch]

- Added new ``language-switcher`` view usable as a default view method for the